--- a/Flickr Digger/Base.lproj/Main.storyboard
+++ b/Flickr Digger/Base.lproj/Main.storyboard
@@ -1,24 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uaF-wT-NH6">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="Flickr_Digger" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="GRn-tI-nfk">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p5u-cW-ckb">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LLe-wB-jTO">
+                                    <size key="itemSize" width="117" height="114"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GRn-tI-nfk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8OP-SZ-5qg"/>
+                            <constraint firstItem="GRn-tI-nfk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ABc-iX-Ltf"/>
+                            <constraint firstItem="p5u-cW-ckb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IeL-ic-dGb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p5u-cW-ckb" secondAttribute="trailing" id="hVD-OS-ckW"/>
+                            <constraint firstItem="p5u-cW-ckb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="puz-MC-l7Q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p5u-cW-ckb" secondAttribute="bottom" id="vFF-Wd-uqi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="pIr-9e-DUa"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="GRn-tI-nfk" id="kYO-oO-oZK"/>
+                        <outlet property="collectionView" destination="p5u-cW-ckb" id="ewl-KQ-H9k"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="944.92753623188412" y="774.77678571428567"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="n12-8y-zms">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uaF-wT-NH6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vrY-hl-z16">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PeT-OS-r7h"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X8b-7S-BkG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="179.71014492753625" y="774.77678571428567"/>
+        </scene>
+        <!--Photo Detail View Controller-->
+        <scene sceneID="Z4r-RV-l0I">
+            <objects>
+                <viewController storyboardIdentifier="photoDetail" id="x4m-rb-ERz" customClass="PhotoDetailViewController" customModule="Flickr_Digger" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gyD-gl-ZW9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R37-ql-g6H">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="0iJ-Lw-dxc">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                                <color key="color" red="0.016804177310000001" green="0.46790900089999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="R37-ql-g6H" firstAttribute="leading" secondItem="RVw-T6-Cnq" secondAttribute="leading" id="3TD-nC-0oz"/>
+                            <constraint firstItem="0iJ-Lw-dxc" firstAttribute="centerX" secondItem="gyD-gl-ZW9" secondAttribute="centerX" id="Jpa-AF-mVL"/>
+                            <constraint firstItem="R37-ql-g6H" firstAttribute="top" secondItem="gyD-gl-ZW9" secondAttribute="top" id="MSI-Ik-Xyc"/>
+                            <constraint firstItem="0iJ-Lw-dxc" firstAttribute="centerY" secondItem="gyD-gl-ZW9" secondAttribute="centerY" id="uph-JJ-Zuz"/>
+                            <constraint firstItem="R37-ql-g6H" firstAttribute="trailing" secondItem="RVw-T6-Cnq" secondAttribute="trailing" id="vI6-3Y-VMA"/>
+                            <constraint firstAttribute="bottom" secondItem="R37-ql-g6H" secondAttribute="bottom" id="w1E-ze-ciX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RVw-T6-Cnq"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="0iJ-Lw-dxc" id="k1T-t7-hp4"/>
+                        <outlet property="imageView" destination="R37-ql-g6H" id="jRk-u4-YCG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nHX-tI-XRG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1866.6666666666667" y="774.77678571428567"/>
         </scene>
     </scenes>
 </document>
