--- a/Flickr Digger/Views/PhotoCollectionViewCell/PhotoCollectionViewCell.xib
+++ b/Flickr Digger/Views/PhotoCollectionViewCell/PhotoCollectionViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="229" height="242"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pI-my-bLT" customClass="URLImageView" customModule="Flickr_Digger" customModuleProvider="target">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pI-my-bLT">
                         <rect key="frame" x="0.0" y="0.0" width="229" height="242"/>
                         <color key="backgroundColor" red="0.92941176470588238" green="0.93725490196078431" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
@@ -34,7 +34,7 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="229" height="242"/>
             <connections>
-                <outlet property="imageView" destination="9pI-my-bLT" id="ZeT-a0-iNa"/>
+                <outlet property="imageView" destination="9pI-my-bLT" id="TvD-lr-tKB"/>
             </connections>
             <point key="canvasLocation" x="80" y="150"/>
         </collectionViewCell>
